# aws-ml-api-template

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docker-images.yml  ecr-images.yml
api/: aws_config.py
api/routes/: endpoints.py
scripts/: build_dev_image.sh  build_prd_image.sh  setup_venv.sh  upgrade.sh
workspace/: settings.py
workspace/dev/: docker_config.py
workspace/dev/jupyter/: build_jupyter_image.sh  docker_resources.py
workspace/prd/: aws_config.py  docker_config.py
