[project]
name = "ml-api"
version = "0.1.0"
requires-python = ">3.7"
readme = "README.md"
authors = [
  {name = "Team", email = "team@team.com"}
]

dependencies = [
  # Formatting
  "black",
  # Type checking
  "mypy",
  # Pre-commit hooks
  "pre-commit",
  # Testing
  "pytest",
  # Linting
  "ruff",
  "phidata==1.5.2",
  # Libraries for data processing
  "pandas",
  "polars",
  # Libraries for Api server
  "fastapi",
  "typer",
  "uvicorn",
]

[project.scripts]
api = "api.cli:cli"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["api", "workspace", "tests"]

# Update this value if the workspace directory is renamed.
# [tool.phidata]
# workspace = "workspace"

[tool.ruff]
line-length = 110
exclude = [
  ".venv*",
]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
exclude = [
  ".venv*",
]

[[tool.mypy.overrides]]
module = [
  "pandas.*",
  "phidata.*",
  "setuptools.*",
]
ignore_missing_imports = true
